fixed product grids on small screens

--- a/style.css
+++ b/style.css
@@ -709,7 +709,7 @@ figcaption {
     }
 }
 
-@media screen and (max-width: 767.99px){
+@media screen and (max-width: 767.9px){
     .wp-block-columns {
         display: block;
     }
@@ -741,6 +741,16 @@ figcaption {
     
     #site-header-cart {
         position: static;
+    }
+    
+    #main .wc-block-grid .wc-block-grid__product {
+        max-width:100%;
+        flex-basis: 100%;
+    }
+
+    .woocommerce ul.products[class*=columns-] li.product,
+    .woocommerce-page ul.products[class*=columns-] li.product {
+        width: 98%;
     }
 }
 
@@ -779,7 +789,10 @@ figcaption {
 }
 
 @media screen and (min-width: 768px) and (max-width: 959.99px){
-
+    #main .wc-block-grid.has-4-columns .wc-block-grid__product {
+        max-width: 50%;
+        flex-basis: 50%;
+    }
 }
 
 @media screen and (min-width: 960px) and (max-width: 1199.99px){
